# flask-react-full-example

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: Navbar.tsx
client/src/interfaces/: Api.ts  Auth.ts
client/src/pages/: Login.tsx  PublicLists.tsx
client/src/stores/: AuthStore.tsx
docs/: Auth.postman_collection.json  Categories.postman_collection.json  Lists.postman_collection.json  Smartninja Inventory.postman_environment.json  Users.postman_collection.json
server/: pyproject.toml  server.py
server/inventory/: __init__.py  config.py  inventory.db
server/inventory/handlers/: __init__.py  auth_handler.py  category_handler.py  list_handler.py  users_handler.py
server/inventory/models/: __init__.py  items.py  list.py  user.py
server/inventory/seralizers/: __init__.py  items_schema.py  list_serializer.py  users_serializer.py
