[tool.poetry]
name = "server"
version = "0.1.0"
description = "Flask backend"
authors = ["Jani Šumak"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.27.0"
Flask-JWT-Extended = "^4.3.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
